--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
   },
   "homepage": "https://github.com/IndimaDias/Constructor-Word-Guess#readme",
   "dependencies": {
+    "ascii-art": "^1.5.1",
+    "asciiart-logo": "^0.2.6",
+    "chalk": "^2.4.2",
+    "chalk-animation": "^1.6.0",
+    "figlet": "^1.2.3",
+    "gradient-string": "^1.2.0",
     "inquirer": "^6.3.1",
     "random-words": "^1.1.0"
   }
